[package]
name = "libatrace"
version = "0.1.0"
description = "A rust library for writing tracing to linux debug fs."
authors = ["sukzhong@sina.com"]
repository = "https://github.com/Grainspring/libatrace"
license = "MIT"
readme = "README.md"
edition = "2018"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["tracing", "libatrace", "debugfs"]

[dependencies]
libc = "0.2.48"
lazy_static = "1.3.0"
